--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="3; URL=psgdrivesync.html" />
 </head>
 
 <body>
-<p> My Page <p>
+<p> Parmeet Singh Ghai Home Page<p>
 </body>
 
 </html>
