--- a/psgdrivesync.html
+++ b/psgdrivesync.html
@@ -230,11 +230,11 @@
 				<div>
 					<p>
 					<p>We value your privacy. In this Privacy Policy (&quot;Policy&quot;), we describe how we collect, use, and disclose information that we obtain about the users of the Program.</p>
-					<p class = "row centered" style = "color: black;">WHICH COUNTRIES ARE CURRENTLY NOT SUPPORTED?</p>
+					<p class = "row centered">WHICH COUNTRIES ARE CURRENTLY NOT SUPPORTED?</p>
 		     		<p class = "row centered">India, Afghanistan, United Arab Emirates (the), &Aring;land Islands, Albania, Algeria, Armenia, Azerbaijan, Bahrain, Bangladesh, Bhutan, Cyprus, Egypt, Iran (Islamic Republic of), Iraq, Israel, Jordan, Kazakhstan, Kyrgyzstan, Kuwait, Lao People's Democratic Republic (the), Latvia, Lebanon, Liberia, Oman, State of Palestine, Pakistan, Qatar, Sri Lanka, Syrian Arab Republic, Saudi Arabia, Turkey,Turkmenistan,Yemen.</p>
-					<p class = "row centered" style = "color: black;">WHAT IS THE ROLE OF THIRD PARTY SERVICES?</p>
+					<p class = "row centered">WHAT IS THE ROLE OF THIRD PARTY SERVICES?</p>
 					<p>We not provide any warranties with respect to any Third Party Applications or services, whether or not such Third Party Applications are listed on or accessed in or through the Product, or designated by us as &ldquo;certified&rdquo;, &ldquo;approved&rdquo;, &ldquo;recommended&rdquo; or otherwise, or the services are provided by a third party that is a member of our partner program. Any use by You of any Third-Party Applications or services is solely between You and/or your organization and the applicable third-party provider.</p>
-					<p class = "row centered" style = "color: black;">WHAT DATA WE COLLECT?</p>
+					<p class = "row centered">WHAT DATA WE COLLECT?</p>
 					<p>
 						Data is collected only during the license installation process. Listed below are the data items which are collected during the license activation process along with the life span of that data item.
 						<ol style = "text-align: left;">
@@ -243,7 +243,7 @@
 							<li>Your Paypal Transaction Details namely: Transaction Id, Transaction Start Date, Transaction Amount and Payer Email Address are saved in persistent storage only to keep track of your current license which is required for continual usage of the Program. When you choose to delete or remove your license then that data gets removed from persistent storage as well.</li>
 						</ol>
 					</p>
-					<p class = "row centered" style = "color: black;">WHAT DATA WE USE BUT NEVER COLLECT?</p>
+					<p class = "row centered">WHAT DATA WE USE BUT NEVER COLLECT?</p>
 					<p>
 						This Data is also used during the license installation process but unlike the data that we collect, this data is never saved in persistent storage. Listed below are the data items which are used during the license activation process along with the life span of that data item.
 						<ol style = "text-align: left;">
@@ -252,19 +252,21 @@
 							<li>Your Paypal Transaction's Payer Country Code found under the 'payer_info' section of transaction details . This information is used to check if the transaction's originating country is not one of the unsupported countries mentioned above.</li>
 						</ol>
 					</p>
-					<p class = "row centered" style = "color: black;">WHEN IS MY DATA COLLECTED?</p>
+					<p class = "row centered">WHEN IS MY DATA COLLECTED?</p>
 					<p>Your data is collected only during the license activation process to keep track of your current license which is required for continual usage of the Program.</p>
-					<p class = "row centered" style = "color: black;">HOW WE USE YOUR DATA?</p>
+					<p class = "row centered">HOW WE USE YOUR DATA?</p>
 					<p>Your data is only used to keep track of your current license which is required for continual usage of the Program. Program's functions are disabled as soon as the license expires, in which case you are requested to purchase another license if you choose to continue using the Program.</p>
-					<p class = "row centered" style = "color: black;">WHERE IS MY DATA STORED?</p>
+					<p class = "row centered">WHERE IS MY DATA STORED?</p>
 					<p>Persistent storage mentioned above is our personal Google Drive Account which is backed up by Google's 2 Factor Authentication Login Process.</p>
-					<p class = "row centered" style = "color: black;">HOW LONG DO WE RETAIN YOUR DATA?</p>
+					<p class = "row centered">HOW LONG DO WE RETAIN YOUR DATA?</p>
 					<p>As long as you are using our licensed product. When you choose to delete or remove your license then that data gets removed from persistent storage as well.</p>
-					<p class = "row centered" style = "color: black;">WHEN WILL YOU CHANGE YOUR PRIVACY POLICY?</p>
+					<p class = "row centered">WHEN WILL YOU CHANGE YOUR PRIVACY POLICY?</p>
 					<p>We may update the privacy policy from time to time. Any changes we make to our privacy policy in the future will be posted on this page and, where appropriate, notified to you by e-mail or post. Please check back frequently to see any updates or changes to our privacy policy.</p>
-					<p class = "row centered" style = "color: black;"> HOW DO I CONTACT YOU WITH FEEDBACK?</p>
+					<p class = "row centered"> HOW DO I CONTACT YOU WITH FEEDBACK?</p>
 					<p class = "row centered">Questions, comments and requests regarding this privacy policy are welcomed and should be addressed to <a href="mailto:parmeet.s.ghai@gmail.com">parmeet.s.ghai@gmail.com</a></p></p>
-					<p class = "row centered">Click here to download privacy policy</p>
+					<p class = "row centered">
+						<a href="/assets/docs/PrivacyPolicy.txt">Click here to download privacy policy</a>
+					</p>
 				</div>
 			</div>
 			<br>
