--- a/psgdrivesync.html
+++ b/psgdrivesync.html
@@ -43,7 +43,7 @@
 	            <li><a href="#desc" class="smothscroll">Features</a></li>
 	            <li><a href="#showcase" class="smothScroll">Showcase</a></li>
 				<li><a href="#download" class="smothScroll">Download</a></li>
-				<li><a href="/assets/docs/EndUserLicenseAgreement.txt" class="smothScroll">Terms & Conditions</a></li>
+				<li><a href="/assets/docs/EndUserLicenseAgreement.txt" class="smothScroll" target="_blank">Terms & Conditions</a></li>
 				<li><a href="#privacypolicy" class="smothScroll">Privacy Policy</a></li>
 				<li><a href="#contact" class="smothScroll">Contact</a></li>
 	          </ul>
