--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<p> Parmeet Singh Ghai Home Page<p>
+<p> Parmeet Singh Ghai Home Page - Under Contruction. Please check in again in a few days<p>
 </body>
 
 </html>
