psgdrivesync page updated
Moved assets and help files for PSGDriveSync under root > psgdrivesync folder

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="3; URL=https://parmeetsinghghai.github.io/psgdrivesync/psgdrivesync.html" />
+    <meta http-equiv="refresh" content="3; URL=https://parmeetsinghghai.github.io/psgdrivesync/index.html" />
 </head>
 
 <body>
