help site updated as on 17th Feb 2023

--- a/psgdrivesync/help/drives.html
+++ b/psgdrivesync/help/drives.html
@@ -6,11 +6,15 @@
         <table>
             <tr style = "width: 100%; height:100%">
                 <td style = "width:50% ; height:100%">
-                    <img src = "../assets/img/licenses/licenseswindow.png" width="100%" height = "100%">
+                    <img src = "../assets/img/drives/driveswindow.png" width="100%" height = "100%">
                 </td>
                 <td style = "width:50% ; height:100%">
                     <p>
+                        Drives window lets you add both remote drives (google drives) and local drives in the application. Without adding a drive for your google drive account 
+                        or any of your local drive(s), you will not be able to work on any of the files and folders contained in those drives even though all of the application 
+                        functionalities get enabled by adding a license for your google drive account. so the first step after adding a license should be to add drives.<br/><br/>
                         
+                        Please go ahead and click on "Add Remote Drive" on the left to see how its done. As always thank you for using the application. We Appreciate it.
                     </p>
                 </td>
             </tr>
