--- a/psgdrivesync/help/index.html
+++ b/psgdrivesync/help/index.html
@@ -53,13 +53,18 @@
             <tr>
                 <td style = "width:10%;height:100%;border-style: double;">
                     <ul>
+                        <li><button id="UserInterface" onclick="LoadPage(this.id)">General User Interface</button></li>
+                        <li><button id="MasterKey" onclick="LoadPage(this.id)">Master Key</button></li>
+                        <ul id="MasterKeyOptions" style = "display: none;">
+                            <li><button id = "NewMasterKey" onclick="LoadSection(this.id)">New Master Key</button></li>
+                            <li><button id = "ChangeMasterKey" onclick="LoadSection(this.id)">Change Master Key</button></li>
+                        </ul>
                         <li><button id="Licenses" onclick="LoadPage(this.id)">Licenses</button>
                             <ul id="LicensesOptions" style = "display: none;">
                                 <li><button id = "AddLicense" onclick="LoadSection(this.id)">Add License</button></li>
                                 <li><button id = "SaveLicense" onclick="LoadSection(this.id)">Save License</button></li>
                                 <li><button id = "DeleteLicense" onclick="LoadSection(this.id)">Delete License</button></li>
                                 <li><button id = "DownloadLicense" onclick="LoadSection(this.id)">Download License</button></li>
-                                <li><button id = "RefreshLicense" onclick="LoadSection(this.id)">Refresh License</button></li>
                             </ul>
                         </li>
                         <li><button id="Drives" onclick="LoadPage(this.id)">Drives</button>
@@ -68,15 +73,60 @@
                                 <li><button id = "AddLocalDrive" onclick="LoadSection(this.id)">Add Local Drive</button></li>
                                 <li><button id = "SaveDrive" onclick="LoadSection(this.id)">Save Drive</button></li>
                                 <li><button id = "DeleteDrive" onclick="LoadSection(this.id)">Delete Drive</button></li>
-                                <li><button id = "MountUnmountDrive" onclick="LoadSection(this.id)">Mount & Unmount Drive</button></li>
-                                <li><button id = "DockUndockDrive" onclick="LoadSection(this.id)">Dock & Undock Drive</button></li>     
-                                <li><button id = "AutoSyncDrive" onclick="LoadSection(this.id)">Enable Auto Sync On Drive</button></li>  
+                                <li><button id = "MountDrive" onclick="LoadSection(this.id)">Mount & Unmount Drive</button></li>
+                                <li><button id = "DockDrive" onclick="LoadSection(this.id)">Dock & Undock Drive</button></li>     
+                                <li><button id = "AutoSyncDrive" onclick="LoadSection(this.id)">Enable & Disable Auto Sync On Drive</button></li>  
                                 <li><button id = "ColorDrive" onclick="LoadSection(this.id)">Assign Color to Drive</button></li>                           
                             </ul>
                         </li>
-                        <li><button id="Files" onclick="LoadPage(this.id)">Files</button></li>
-                        <li><button id="Encryption" onclick="LoadPage(this.id)">Encryption</button></li>
-                        <li><button id="Filters" onclick="LoadPage(this.id)">Filters</button></li>
+                        <li><button id="FilesBrowse" onclick="LoadPage(this.id)">Files - Browse Mode</button>
+                            <ul id="FilesBrowseOptions" style = "display: none;">
+                                <li><button id = "SwitchToSync" onclick="LoadSection(this.id)">Switch To Sync Window</button></li>
+                                <li><button id = "NewFileFolder" onclick="LoadSection(this.id)">Create New File or Folder</button></li>
+                                <li><button id = "CutCopyPasteFileFolder" onclick="LoadSection(this.id)">Cut, Copy, Paste Files & Folders</button></li>
+                                <li><button id = "DeleteFileFolder" onclick="LoadSection(this.id)">Delete Files & Folders</button></li>
+                                <li><button id = "RenameFileFolder" onclick="LoadSection(this.id)">Rename Files & Folders</button></li>
+                                <li><button id = "SelectAllFileFolder" onclick="LoadSection(this.id)">Select All Files & Folders</button></li>     
+                                <li><button id = "Properties" onclick="LoadSection(this.id)">File & Folder Properties</button></li>  
+                                <li><button id = "EncryptFileFolder" onclick="LoadSection(this.id)">Encrypt File & Folder</button></li>  
+                                <li><button id = "DecryptFileFolder" onclick="LoadSection(this.id)">Decrypt File & Folder</button></li>    
+                                <li><button id = "CompareFileFolder" onclick="LoadSection(this.id)">Compare Files & Folders</button></li>   
+                                <li><button id = "SearchForEncryptedFiles" onclick="LoadSection(this.id)">Search for Encrypted Files</button></li>  
+                                <li><button id = "SendToFilters" onclick="LoadSection(this.id)">Send Files & Folders To Filters Window</button></li>                    
+                            </ul>
+                        </li>
+                        <li><button id="FilesSync" onclick="LoadPage(this.id)">Files - Sync Mode</button>
+                            <ul id="FilesSyncOptions" style = "display: none;">
+                                <li><button id = "SwitchToBrowse" onclick="LoadSection(this.id)">Switch To Browse Window</button></li>
+                                <li><button id = "StartSync" onclick="LoadSection(this.id)">Start Sync</button></li>
+                                <li><button id = "StopSync" onclick="LoadSection(this.id)">Stop Sync</button></li>
+                                <li><button id = "AddContainer" onclick="LoadSection(this.id)">Add Sync Container</button></li>
+                                <li><button id = "SaveContainer" onclick="LoadSection(this.id)">Save Sync Container</button></li>
+                                <li><button id = "DeleteContainer" onclick="LoadSection(this.id)">Delete Sync Container</button></li>
+                                <li><button id = "AddItem" onclick="LoadSection(this.id)">Add Sync Item</button></li>
+                                <li><button id = "SaveItem" onclick="LoadSection(this.id)">Save Sync Item</button></li>
+                                <li><button id = "DeleteItem" onclick="LoadSection(this.id)">Delete Sync Item</button></li>
+                            </ul>
+                        </li>                        
+                        <li><button id="Encryption" onclick="LoadPage(this.id)">Encryption</button>
+                            <ul id="EncryptionOptions" style = "display: none;">
+                                <li><button id = "AddKey" onclick="LoadSection(this.id)">Add Encryption Key</button></li>
+                                <li><button id = "SaveKey" onclick="LoadSection(this.id)">Save Encryption Key</button></li>
+                                <li><button id = "DeleteKey" onclick="LoadSection(this.id)">Delete Encryption Key</button></li>
+                            </ul>
+                        </li>
+                        <li><button id="Filters" onclick="LoadPage(this.id)">Filters</button>
+                            <ul id="FiltersOptions" style = "display: none;">
+                                <li><button id = "AddFilter" onclick="LoadSection(this.id)">Add Filter</button></li>
+                                <li><button id = "SaveFilter" onclick="LoadSection(this.id)">Save Filter</button></li>
+                                <li><button id = "DeleteFilter" onclick="LoadSection(this.id)">Delete Filter</button></li>
+                                <li><button id = "AddFilteredFile" onclick="LoadSection(this.id)">Add Filtered File(s)</button></li>
+                                <li><button id = "SaveFilteredFile" onclick="LoadSection(this.id)">Save Filtered File(s)</button></li>
+                                <li><button id = "DeleteFilteredFile" onclick="LoadSection(this.id)">Delete Filtered File(s)</button></li>
+                                <li><button id = "FindFilteredFiles" onclick="LoadSection(this.id)">Find Filtered Files For A Filter</button></li>
+                                <li><button id = "EnableInheritance" onclick="LoadSection(this.id)">Setting Filter As Inheritable</button></li>
+                            </ul>
+                        </li>
                     </ul> 
                 </td>
                 <td style = "width:90%;height:100%;border-style: double;" loadedPage = "">
