--- a/psgdrivesync/help/savelicense.html
+++ b/psgdrivesync/help/savelicense.html
@@ -20,7 +20,7 @@
                     <p>1</p>
                 </td>
                 <td>
-                    <p>Right after you have added / installed a license or downloaded an existing licnese, you can do any one of the following<br/>
+                    <p>Right after you have added / installed a license or downloaded an existing license, you can do any one of the following<br/>
                         <ul>
                             <li>
                                 Click on the "Save" button next to the license email.
@@ -30,6 +30,9 @@
                             </li>
                             <li>
                                 Right click on the selected license and then click on "Save License(s)".
+                            </li>
+                            <li>
+                                Press Ctrl + S on the keyboard.
                             </li>
                         </ul>
                     </p>
