--- a/psgdrivesync/help/licenses.html
+++ b/psgdrivesync/help/licenses.html
@@ -14,7 +14,7 @@
                         with is the addition of your google drive account into this application which is done through "Licenses" window as shown on the right.
                         There is no limit to the number of google drive accounts which can be added to the appplication however there needs to be at least one google drive 
                         account present in order for application functionalities like Addition of local drives, Encryption, Filters etc to work.<br/><br/>
-                        Please go ahead and click on "Add License" on the left to see how its done. As always thank you for using the application. I Appreciate it.
+                        Please go ahead and click on "Add License" on the left to see how its done. As always thank you for using the application. We Appreciate it.
                     </p>
                 </td>
             </tr>
