Changes to PSGDriveSync - 20th Feb 2023

--- a/psgdrivesync/help/cutcopypastefilefolder.html
+++ b/psgdrivesync/help/cutcopypastefilefolder.html
@@ -53,12 +53,29 @@
                 <td>
                     <p>
                         If the destination folder belonged to some other drive than the source drive then you should see a popup window open 
-                        up displaying the progress of moving or copying the file / folder over to its new destination folder. when the progress bar 
-                        moves all the up way to 100% then you may go ahead and close that window. 
+                        up displaying the progress of moving or copying the file / folder over to its new destination folder. Once the file 
+                        operation completes then you may go ahead and click on "Close" in the popup window.
                     </p>
                 </td>
                 <td>
                     <img src="../assets/img/filesbrowse/cutcopypaste3.png">
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <p>2</p>
+                </td>
+                <td>
+                    <p>
+                        Both the destination folder and the source file/folder's parent folder should reflect the changes in them due to this 
+                        file/folder move/copy operation.<br/><br/> In case of copy operation, the source file/folder should show in both source file/folder
+                        parent folder and the destination folder however if this was a move operation then the source file/folder will be removed 
+                        from the source file/folder parent folder and will only show in the destination folder.
+                    </p>
+                </td>
+                <td>
+                    <img src="../assets/img/filesbrowse/cutcopypaste4.png">
                 </td>
             </tr>
         </table>
