--- a/psgdrivesync/help/downloadlicense.html
+++ b/psgdrivesync/help/downloadlicense.html
@@ -12,7 +12,7 @@
         <p>
             Licenses are needed to be downloaded when you have not deleted the license using the application however the license data was lost due to 
             events like reinstallation of the operation system or accidental deletion of the application files and data etc. In such situations, instead of 
-            installating / adding a license all over again, the application provides a shortcut to getting the license back which is the option to 
+            installing / adding a license all over again, the application provides a shortcut to getting the license back which is the option to 
             download an existing license. Following are the steps needed to be followed in order to download an existing license
         <p/>
 
