--- a/psgdrivesync/help/index.html
+++ b/psgdrivesync/help/index.html
@@ -87,7 +87,7 @@
                                 <li><button id = "DeleteFileFolder" onclick="LoadSection(this.id)">Delete Files & Folders</button></li>
                                 <li><button id = "RenameFileFolder" onclick="LoadSection(this.id)">Rename Files & Folders</button></li>
                                 <li><button id = "SelectAllFileFolder" onclick="LoadSection(this.id)">Select All Files & Folders</button></li>     
-                                <li><button id = "Properties" onclick="LoadSection(this.id)">File & Folder Properties</button></li>  
+                                <li><button id = "PropertiesFileFolder" onclick="LoadSection(this.id)">File & Folder Properties</button></li>  
                                 <li><button id = "EncryptFileFolder" onclick="LoadSection(this.id)">Encrypt File & Folder</button></li>  
                                 <li><button id = "DecryptFileFolder" onclick="LoadSection(this.id)">Decrypt File & Folder</button></li>    
                                 <li><button id = "CompareFileFolder" onclick="LoadSection(this.id)">Compare Files & Folders</button></li>   
@@ -100,12 +100,11 @@
                                 <li><button id = "SwitchToBrowse" onclick="LoadSection(this.id)">Switch To Browse Window</button></li>
                                 <li><button id = "StartSync" onclick="LoadSection(this.id)">Start Sync</button></li>
                                 <li><button id = "StopSync" onclick="LoadSection(this.id)">Stop Sync</button></li>
-                                <li><button id = "AddContainer" onclick="LoadSection(this.id)">Add Sync Container</button></li>
-                                <li><button id = "SaveContainer" onclick="LoadSection(this.id)">Save Sync Container</button></li>
-                                <li><button id = "DeleteContainer" onclick="LoadSection(this.id)">Delete Sync Container</button></li>
-                                <li><button id = "AddItem" onclick="LoadSection(this.id)">Add Sync Item</button></li>
-                                <li><button id = "SaveItem" onclick="LoadSection(this.id)">Save Sync Item</button></li>
-                                <li><button id = "DeleteItem" onclick="LoadSection(this.id)">Delete Sync Item</button></li>
+                                <li><button id = "AddContainer" onclick="LoadSection(this.id)">Add Sync Containers & Sync Items</button></li>
+                                <li><button id = "AddItem" onclick="LoadSection(this.id)">Add Sync Items to an Existing Sync Container</button></li>
+                                <li><button id = "SaveContainer" onclick="LoadSection(this.id)">Save Sync Container & Sync Items</button></li>
+                                <li><button id = "ConfigureContainer" onclick="LoadSection(this.id)">Configure Sync Container & Sync Items</button></li>                                
+                                <li><button id = "DeleteContainer" onclick="LoadSection(this.id)">Delete Sync Containers & Sync Items</button></li>
                             </ul>
                         </li>                        
                         <li><button id="Encryption" onclick="LoadPage(this.id)">Encryption</button>
@@ -124,7 +123,7 @@
                                 <li><button id = "SaveFilteredFile" onclick="LoadSection(this.id)">Save Filtered File(s)</button></li>
                                 <li><button id = "DeleteFilteredFile" onclick="LoadSection(this.id)">Delete Filtered File(s)</button></li>
                                 <li><button id = "FindFilteredFiles" onclick="LoadSection(this.id)">Find Filtered Files For A Filter</button></li>
-                                <li><button id = "EnableInheritance" onclick="LoadSection(this.id)">Setting Filter As Inheritable</button></li>
+                                <li><button id = "EnableInheritance" onclick="LoadSection(this.id)">Setting Filter As Inheritable In A Filtered File</button></li>
                             </ul>
                         </li>
                     </ul> 
