--- a/psgdrivesync/help/stopsync.html
+++ b/psgdrivesync/help/stopsync.html
@@ -10,16 +10,14 @@
     </head>
     <body>
         <p>
-            "Start Sync" operation allows you to start sync operations on a drive. Whenever sync operations are started, even on one drive, the following 
-            functionalities get disabled.<br/>
+            "Stop Sync" operation allows you to stop sync operations on a drive. Whenever sync operations are stopped on all drives then the following 
+            functionalities get enabled back on.<br/>
             <ul>
-                <li>"Encryption" window becomes inaccessible.</li>
-                <li>"Filters" window becomes inaccessible.</li>
-                <li>"Change Master Key" functionality in "Help" window becomes inaccessible.</li>
-                <li>Save and Deletion for Sync Containers and Sync Items are disabled in "Files" window</li>
+                <li>"Encryption" window becomes accessible again.</li>
+                <li>"Filters" window becomes accessible again.</li>
+                <li>"Change Master Key" functionality in "Help" window becomes accessible again.</li>
+                <li>Save and Deletion for Sync Containers and Sync Items are enabled back again in "Files" window</li>
             </ul>
-            <br/>
-            All these functionality get enabled or become accessible as soon as the sync operations are stopped on all drives. 
         <p/>
 
         <table>
@@ -43,11 +41,11 @@
                 </td>
                 <td>
                     <p>
-                        Click on the "Start Sync" button on the control bar.
+                        Click on the "Stop Sync" button on the control bar.
                     </p>
                 </td>
                 <td>
-                    <img src="../assets/img/filessync/startsync2.png">
+                    <img src="../assets/img/filessync/stopsync1.png">
                 </td>
             </tr>
 
@@ -57,11 +55,11 @@
                 </td>
                 <td>
                     <p>
-                        All the functionalities mentioned above should show as Disabled / Greyed Out or Inaccessible.
+                        All the functionalities mentioned above should show as Enabled or Accessible. The same should reflect in system messages as well.
                     </p>
                 </td>
                 <td>
-                    <img src="../assets/img/filessync/startsync3.png">
+                    <img src="../assets/img/filessync/stopsync2.png">
                 </td>
             </tr>
         </table>
